--- a/Peakfinder.ipynb
+++ b/Peakfinder.ipynb
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,8 +96,8 @@
     "\n",
     "measurement_offset = 500 # - - - - - - - - - - - - - - - - - - - - - - - check for signal up to this many ms after the startle time (for measurement)\n",
     "\n",
-    "#exclude = [\"offset_PPI\", \"offset_ASR\"] # - - - - - - - - - - - - - - - - experiment types to be excluded from analysis; comment out to include all\n",
-    "exclude = [\"ASR_control\", \"gap_depth\"]"
+    "exclude = [\"offset_PPI\", \"offset_ASR\"] # - - - - - - - - - - - - - - - - experiment types to be excluded from analysis; comment out to include all\n",
+    "#exclude = [\"ASR_control\", \"gap_depth\"]"
    ]
   },
   {
@@ -964,7 +964,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
