--- a/TODO
+++ b/TODO
@@ -55,3 +55,9 @@ After we're done:
 - redo basically all of Analyzer and make it also return usable values
 
 - make RESULTS_DATES df even if useless just for completion's sake
+
+- background level comparable to r420h mice maybe (for thesis writing) real cba comparison with littermates
+
+- check if the strength and everything changes after 2nd mouse onwards or in what way it decreases (or RT increases)
+also do literature search
+investigate further
