--- a/AnalyzerJ.ipynb
+++ b/AnalyzerJ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 50,
    "id": "01fa7f35",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 51,
    "id": "89cb28d4",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 52,
    "id": "ae09f6c3",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 53,
    "id": "ab8f4f80",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "80bd6295",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "9cfcbe83",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 56,
    "id": "f00fd660",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 57,
    "id": "1710b0ca",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 58,
    "id": "dff3c8cb",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 59,
    "id": "5f3b2f69",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 60,
    "id": "0122b456",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 61,
    "id": "739ec47d",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 62,
    "id": "48a84a55",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 63,
    "id": "b7921a3e",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 64,
    "id": "4a3183cd",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 65,
    "id": "c6f7260c",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 66,
    "id": "4782bfc4",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 67,
    "id": "a0c95994",
    "metadata": {},
    "outputs": [],
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 68,
    "id": "517e2f34",
    "metadata": {},
    "outputs": [
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 69,
    "id": "69f21201",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 70,
    "id": "1884b0e5",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 71,
    "id": "a92eda10",
    "metadata": {},
    "outputs": [],
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 72,
    "id": "4bd16e16",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1241,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 73,
    "id": "c5fa6fb3",
    "metadata": {},
    "outputs": [
@@ -1513,7 +1513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 74,
    "id": "2151cfc1",
    "metadata": {},
    "outputs": [
@@ -1524,7 +1524,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[25], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBelow is my stuff.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[1;32mIn[74], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBelow is my stuff.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
       "\u001b[1;31mException\u001b[0m: Below is my stuff."
      ]
     }
@@ -1727,7 +1727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "3b480251",
    "metadata": {},
    "outputs": [
@@ -1864,7 +1864,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": null,
    "id": "4272158e",
    "metadata": {},
    "outputs": [
@@ -1946,7 +1946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "id": "6054a47a",
    "metadata": {},
    "outputs": [
@@ -1964,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "id": "a018d14a",
    "metadata": {},
    "outputs": [
@@ -2025,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "id": "9382c7ee",
    "metadata": {},
    "outputs": [
@@ -2085,6 +2085,131 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "1bb86ad5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Post hoc Dunn's test for all metrics (sex as group):\n",
+      "peakValue: Kruskal-Wallis p=6.74e-16\n",
+      "              female          male\n",
+      "female  1.000000e+00  6.741983e-16\n",
+      "male    6.741983e-16  1.000000e+00\n",
+      "Means by sex: {'female': 88.0068287037037, 'male': 156.7277777777778}\n",
+      "RMS: Kruskal-Wallis p=1.08e-10\n",
+      "              female          male\n",
+      "female  1.000000e+00  1.077612e-10\n",
+      "male    1.077612e-10  1.000000e+00\n",
+      "Means by sex: {'female': 23.79721064814815, 'male': 39.203741898148145}\n",
+      "tau: Kruskal-Wallis p=5.58e-13\n",
+      "              female          male\n",
+      "female  1.000000e+00  5.579280e-13\n",
+      "male    5.579280e-13  1.000000e+00\n",
+      "Means by sex: {'female': 157.06050347222222, 'male': 119.15753472222222}\n",
+      "AUC: Kruskal-Wallis p=3.64e-06\n",
+      "          female      male\n",
+      "female  1.000000  0.000004\n",
+      "male    0.000004  1.000000\n",
+      "Means by sex: {'female': 9747.47350462963, 'male': 14432.11834375}\n",
+      "reactionTime: Kruskal-Wallis p=0.0178\n",
+      "          female      male\n",
+      "female  1.000000  0.017808\n",
+      "male    0.017808  1.000000\n",
+      "Means by sex: {'female': 10.763425925925924, 'male': 10.419444444444444}\n",
+      "peakTime: Kruskal-Wallis p=0.333\n",
+      "No significant post hoc differences for peakTime. Kruskal-Wallis p=0.333\n",
+      "difference: Kruskal-Wallis p=0.815\n",
+      "No significant post hoc differences for difference. Kruskal-Wallis p=0.815\n"
+     ]
+    }
+   ],
+   "source": [
+    "# ...existing code...\n",
+    "\n",
+    "# Post hoc Dunn's test for each metric (sex as group) after compare_male_female\n",
+    "import scikit_posthocs as sp\n",
+    "\n",
+    "all_metrics = strength_metrics + reaction_metrics\n",
+    "print(\"\\nPost hoc Dunn's test for all metrics (sex as group):\")\n",
+    "for var in all_metrics:\n",
+    "    if var not in df.columns:\n",
+    "        continue\n",
+    "    # Only test if both groups have enough data\n",
+    "    groups = [group[var].dropna().values for _, group in df.groupby('sex')]\n",
+    "    groups = [g for g in groups if len(g) > 1]\n",
+    "    if len(groups) < 2:\n",
+    "        continue\n",
+    "    stat, p = kruskal(*groups)\n",
+    "    print(f\"{var}: Kruskal-Wallis p={p:.3g}\")\n",
+    "    if p < 0.05:\n",
+    "        dunn = sp.posthoc_dunn(df, val_col=var, group_col='sex', p_adjust='bonferroni')\n",
+    "        print(dunn)\n",
+    "        means = df.groupby('sex')[var].mean()\n",
+    "        print(\"Means by sex:\", means.to_dict())\n",
+    "    else:\n",
+    "        print(f\"No significant post hoc differences for {var}. Kruskal-Wallis p={p:.3g}\")\n",
+    "#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6f3dd7f8",
+   "metadata": {},
+   "source": [
+    "### Interpretation: Post Hoc Dunn's Test for All Metrics (Sex as Group)\n",
+    "\n",
+    "#### Strength Metrics\n",
+    "\n",
+    "- **peakValue**  \n",
+    "  - Kruskal-Wallis p = 6.74e-16 (**significant**)\n",
+    "  - Dunn's test: Significant difference between males and females (p ≈ 7e-16)\n",
+    "  - Means: Female ≈ 88.0, Male ≈ 156.7\n",
+    "\n",
+    "- **RMS**  \n",
+    "  - Kruskal-Wallis p = 1.08e-10 (**significant**)\n",
+    "  - Dunn's test: Significant difference (p ≈ 1e-10)\n",
+    "  - Means: Female ≈ 23.8, Male ≈ 39.2\n",
+    "\n",
+    "- **tau**  \n",
+    "  - Kruskal-Wallis p = 5.58e-13 (**significant**)\n",
+    "  - Dunn's test: Significant difference (p ≈ 6e-13)\n",
+    "  - Means: Female ≈ 157.1, Male ≈ 119.2\n",
+    "\n",
+    "- **AUC**  \n",
+    "  - Kruskal-Wallis p = 3.64e-06 (**significant**)\n",
+    "  - Dunn's test: Significant difference (p ≈ 4e-6)\n",
+    "  - Means: Female ≈ 9747.5, Male ≈ 14432.1\n",
+    "\n",
+    "#### Reaction Metrics\n",
+    "\n",
+    "- **reactionTime**  \n",
+    "  - Kruskal-Wallis p = 0.0178 (**significant**)\n",
+    "  - Dunn's test: Significant difference (p ≈ 0.018)\n",
+    "  - Means: Female ≈ 10.76, Male ≈ 10.42\n",
+    "\n",
+    "- **peakTime**  \n",
+    "  - Kruskal-Wallis p = 0.333 (not significant)\n",
+    "  - No significant post hoc differences\n",
+    "\n",
+    "- **difference**  \n",
+    "  - Kruskal-Wallis p = 0.815 (not significant)\n",
+    "  - No significant post hoc differences\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### Summary\n",
+    "\n",
+    "- All strength metrics and reaction time show robust, statistically significant sex differences.\n",
+    "- Males have higher peakValue, RMS, and AUC; females have higher tau and slightly slower reaction times.\n",
+    "- No sex differences for"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "9ea54e63",
    "metadata": {},
@@ -2094,7 +2219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": null,
    "id": "4185a6c3",
    "metadata": {},
    "outputs": [
@@ -2206,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "id": "9012785c",
    "metadata": {},
    "outputs": [
@@ -2378,7 +2503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "id": "b5c0189d",
    "metadata": {},
    "outputs": [
@@ -2445,7 +2570,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "id": "b10301e9",
    "metadata": {},
    "outputs": [
@@ -2517,7 +2642,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "id": "553db9b2",
    "metadata": {},
    "outputs": [
@@ -2702,7 +2827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "id": "8ab9f6a4",
    "metadata": {},
    "outputs": [
