--- a/AnalyzerJ.ipynb
+++ b/AnalyzerJ.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 76,
    "id": "01fa7f35",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 77,
    "id": "89cb28d4",
    "metadata": {},
    "outputs": [],
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 78,
    "id": "ae09f6c3",
    "metadata": {},
    "outputs": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 79,
    "id": "ab8f4f80",
    "metadata": {},
    "outputs": [
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 80,
    "id": "80bd6295",
    "metadata": {},
    "outputs": [],
@@ -126,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 81,
    "id": "9cfcbe83",
    "metadata": {},
    "outputs": [],
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 82,
    "id": "f00fd660",
    "metadata": {},
    "outputs": [
@@ -176,7 +176,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 83,
    "id": "1710b0ca",
    "metadata": {},
    "outputs": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 84,
    "id": "dff3c8cb",
    "metadata": {},
    "outputs": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 85,
    "id": "5f3b2f69",
    "metadata": {},
    "outputs": [
@@ -325,7 +325,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 86,
    "id": "0122b456",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 87,
    "id": "739ec47d",
    "metadata": {},
    "outputs": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 88,
    "id": "48a84a55",
    "metadata": {},
    "outputs": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 89,
    "id": "b7921a3e",
    "metadata": {},
    "outputs": [
@@ -565,7 +565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 90,
    "id": "4a3183cd",
    "metadata": {},
    "outputs": [],
@@ -575,7 +575,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 91,
    "id": "c6f7260c",
    "metadata": {},
    "outputs": [
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 92,
    "id": "4782bfc4",
    "metadata": {},
    "outputs": [
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 93,
    "id": "a0c95994",
    "metadata": {},
    "outputs": [],
@@ -808,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 94,
    "id": "517e2f34",
    "metadata": {},
    "outputs": [
@@ -820,17 +820,18 @@
       "\n",
       "\n",
       "--- All animals ---\n",
-      "RMS: offset_PPI vs gap_duration | stat=638.000, p=0.0252 (mannwhitney)\n",
-      "reactionTime: offset_PPI vs gap_duration | stat=1206.000, p=0.00883 (mannwhitney)\n",
+      "RMS: offset_PPI vs gap_duration | stat=650.000, p=0.0327 (mannwhitney)\n",
+      "reactionTime: offset_PPI vs gap_duration | stat=1216.000, p=0.00687 (mannwhitney)\n",
       "\n",
       "--- Split by sex: male ---\n",
-      "peakValue: offset_PPI vs gap_duration | stat=126.000, p=0.0177 (mannwhitney)\n",
-      "RMS: offset_PPI vs gap_duration | stat=128.000, p=0.0202 (mannwhitney)\n",
+      "peakValue: offset_PPI vs gap_duration | stat=138.000, p=0.0373 (mannwhitney)\n",
+      "RMS: offset_PPI vs gap_duration | stat=139.000, p=0.0395 (mannwhitney)\n",
       "\n",
       "--- Split by sex: female ---\n",
-      "peakValue: offset_PPI vs gap_duration | stat=138.500, p=0.0384 (mannwhitney)\n",
-      "RMS: offset_PPI vs gap_duration | stat=123.000, p=0.0145 (mannwhitney)\n",
-      "AUC: offset_PPI vs gap_duration | stat=130.000, p=0.0229 (mannwhitney)\n"
+      "peakValue: offset_PPI vs gap_duration | stat=136.000, p=0.0331 (mannwhitney)\n",
+      "RMS: offset_PPI vs gap_duration | stat=121.000, p=0.0127 (mannwhitney)\n",
+      "AUC: offset_PPI vs gap_duration | stat=128.000, p=0.0202 (mannwhitney)\n",
+      "reactionTime: offset_PPI vs gap_duration | stat=311.500, p=0.0382 (mannwhitney)\n"
      ]
     }
    ],
@@ -839,7 +840,7 @@
     "from scipy.stats import ttest_ind, mannwhitneyu, shapiro\n",
     "\n",
     "metrics = ['peakValue', 'RMS', 'tau', 'AUC', 'reactionTime', 'peakTime', 'difference']\n",
-    "df = dfs['RESULTS_MERGED_DATE']\n",
+    "df = dfs['RESULTS_MTT_MERGED_DATE']\n",
     "\n",
     "# Identify experiment groups\n",
     "gap_exps = [exp for exp in df['experiment'].unique() if 'gap_duration' in str(exp).lower()]\n",
@@ -973,7 +974,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 95,
    "id": "69f21201",
    "metadata": {},
    "outputs": [
@@ -1016,7 +1017,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "1884b0e5",
    "metadata": {},
    "outputs": [
@@ -1104,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": null,
    "id": "a92eda10",
    "metadata": {},
    "outputs": [],
@@ -1114,7 +1115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": null,
    "id": "4bd16e16",
    "metadata": {},
    "outputs": [
@@ -1241,7 +1242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "c5fa6fb3",
    "metadata": {},
    "outputs": [
@@ -1513,24 +1514,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": null,
    "id": "2151cfc1",
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "Exception",
-     "evalue": "Below is my stuff.",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mException\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[74], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mException\u001b[39;00m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mBelow is my stuff.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "\u001b[1;31mException\u001b[0m: Below is my stuff."
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "raise Exception(\"Below is my stuff.\")"
+    "#raise Exception(\"Below is my stuff.\")"
    ]
   },
   {
@@ -2086,7 +2075,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 110,
    "id": "1bb86ad5",
    "metadata": {},
    "outputs": [
@@ -2096,35 +2085,35 @@
      "text": [
       "\n",
       "Post hoc Dunn's test for all metrics (sex as group):\n",
-      "peakValue: Kruskal-Wallis p=6.74e-16\n",
+      "peakValue: Kruskal-Wallis p=1.03e-15\n",
       "              female          male\n",
-      "female  1.000000e+00  6.741983e-16\n",
-      "male    6.741983e-16  1.000000e+00\n",
-      "Means by sex: {'female': 88.0068287037037, 'male': 156.7277777777778}\n",
-      "RMS: Kruskal-Wallis p=1.08e-10\n",
+      "female  1.000000e+00  1.025611e-15\n",
+      "male    1.025611e-15  1.000000e+00\n",
+      "Means by sex: {'female': 87.34166666666665, 'male': 155.14641203703704}\n",
+      "RMS: Kruskal-Wallis p=2.55e-10\n",
       "              female          male\n",
-      "female  1.000000e+00  1.077612e-10\n",
-      "male    1.077612e-10  1.000000e+00\n",
-      "Means by sex: {'female': 23.79721064814815, 'male': 39.203741898148145}\n",
-      "tau: Kruskal-Wallis p=5.58e-13\n",
+      "female  1.000000e+00  2.552997e-10\n",
+      "male    2.552997e-10  1.000000e+00\n",
+      "Means by sex: {'female': 23.65947800925926, 'male': 38.88231365740741}\n",
+      "tau: Kruskal-Wallis p=2.61e-13\n",
       "              female          male\n",
-      "female  1.000000e+00  5.579280e-13\n",
-      "male    5.579280e-13  1.000000e+00\n",
-      "Means by sex: {'female': 157.06050347222222, 'male': 119.15753472222222}\n",
-      "AUC: Kruskal-Wallis p=3.64e-06\n",
+      "female  1.000000e+00  2.612926e-13\n",
+      "male    2.612926e-13  1.000000e+00\n",
+      "Means by sex: {'female': 157.47318402777776, 'male': 120.13647569444443}\n",
+      "AUC: Kruskal-Wallis p=3.27e-06\n",
       "          female      male\n",
-      "female  1.000000  0.000004\n",
-      "male    0.000004  1.000000\n",
-      "Means by sex: {'female': 9747.47350462963, 'male': 14432.11834375}\n",
-      "reactionTime: Kruskal-Wallis p=0.0178\n",
+      "female  1.000000  0.000003\n",
+      "male    0.000003  1.000000\n",
+      "Means by sex: {'female': 9709.613829861111, 'male': 14372.853371527779}\n",
+      "reactionTime: Kruskal-Wallis p=0.00856\n",
       "          female      male\n",
-      "female  1.000000  0.017808\n",
-      "male    0.017808  1.000000\n",
-      "Means by sex: {'female': 10.763425925925924, 'male': 10.419444444444444}\n",
-      "peakTime: Kruskal-Wallis p=0.333\n",
-      "No significant post hoc differences for peakTime. Kruskal-Wallis p=0.333\n",
-      "difference: Kruskal-Wallis p=0.815\n",
-      "No significant post hoc differences for difference. Kruskal-Wallis p=0.815\n"
+      "female  1.000000  0.008561\n",
+      "male    0.008561  1.000000\n",
+      "Means by sex: {'female': 10.821527777777776, 'male': 10.437962962962963}\n",
+      "peakTime: Kruskal-Wallis p=0.0752\n",
+      "No significant post hoc differences for peakTime. Kruskal-Wallis p=0.0752\n",
+      "difference: Kruskal-Wallis p=0.915\n",
+      "No significant post hoc differences for difference. Kruskal-Wallis p=0.915\n"
      ]
     }
    ],
@@ -2219,7 +2208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 111,
    "id": "4185a6c3",
    "metadata": {},
    "outputs": [
@@ -2331,7 +2320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 112,
    "id": "9012785c",
    "metadata": {},
    "outputs": [
@@ -2503,7 +2492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 113,
    "id": "b5c0189d",
    "metadata": {},
    "outputs": [
@@ -2570,7 +2559,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "id": "b10301e9",
    "metadata": {},
    "outputs": [
@@ -2642,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 115,
    "id": "553db9b2",
    "metadata": {},
    "outputs": [
@@ -2827,7 +2816,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "id": "8ab9f6a4",
    "metadata": {},
    "outputs": [
