--- a/TODO
+++ b/TODO
@@ -61,3 +61,6 @@ After we're done:
 - check if the strength and everything changes after 2nd mouse onwards or in what way it decreases (or RT increases)
 also do literature search
 investigate further
+
+
+male vs female strength/RT effect strength values seem inverted; also why is tau different
