--- a/TODO
+++ b/TODO
@@ -63,5 +63,5 @@ also do literature search
 investigate further
 
 
-add offset asr and ppi comparison
+check if we exclude too many recordings -> LOT'S of offset trials excluded -> mostly consists of (all) offset ASRs
 check for correlation between peakValue and AUC / tau
